Update files and fix layout bugs

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,16 +181,7 @@ main {
   height: 100%;
   width: 100vw;
 
-  section {
-    @include flex-column();
-
-    // gap: 24px;
-
-    button {
-    font-size: 18px;
-    text-transform: uppercase;
-    }
-    p {
+  section > p {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -200,7 +191,7 @@ main {
     font-size: $default-font-size;
     font-weight: 700;
     }
-    input {
+  input {
     padding: 0 14px;
     height: 46px;
     width: 100%;
@@ -213,41 +204,12 @@ main {
     background: #ffffff;
     border: 1px solid #d1d1d1;
     border-radius: $default-border-radius;
-    }
   }
   .restart-quizz-btn {
     margin: 20px auto 40px;
 
     font-size: 13px;
     text-align: center;
-  }
-  article {
-    position: relative;
-    height: fit-content;
-    width: $default-box-width;
-    > img {
-      height: $default-box-height;
-      width: $default-box-width;
-  
-      border-radius: $default-border-radius;
-    }
-    > p {
-      position: absolute;
-      bottom: 15px;
-      left: 17px;
-  
-      width: 90%;
-  
-      font-size: 19px;
-      font-weight: $font-weight-regular;
-      word-break: normal;
-      color: white;
-    }
-    .gradient {
-      height: $default-box-height;
-      width: $default-box-width;
-      border-radius: $default-border-radius;
-    }
   }
 }
 .input-container {
@@ -389,6 +351,48 @@ main {
     border: 1px solid #d1d1d1;
     border-radius: $default-border-radius;
     height: 177px;
+  }
+}
+#create-quizz-4 {
+  @include flex-column();
+  height: min-content;
+  width: inherit;
+  gap: 12px;
+
+  article {
+    position: relative;
+    height: fit-content;
+    width: $default-box-width;
+    > img {
+      height: $default-box-height;
+      width: $default-box-width;
+  
+      border-radius: $default-border-radius;
+    }
+    > p {
+      position: absolute;
+      bottom: 15px;
+      left: 17px;
+  
+      width: 90%;
+  
+      font-size: 19px;
+      font-weight: $font-weight-regular;
+      word-break: normal;
+      color: white;
+    }
+    .gradient {
+      height: $default-box-height;
+      width: $default-box-width;
+      border-radius: $default-border-radius;
+    }
+  }
+
+  button {
+    text-transform: uppercase;
+  }
+  .restart-quizz-btn{
+    margin-bottom: 10px;
   }
 }
 *.hidden {
@@ -542,18 +546,7 @@ main {
     width: 337px;
     height: fit-content;
   }
-  #Q1 {
-    background-color: rgba(67, 76, 160, 1);
-  }
-  #Q2 {
-    background-color: rgba(160, 67, 141, 1);
-  }
-  #Q3 {
-    background-color: rgba(22, 183, 189, 1);
-  }
-  #Q4 {
-    background-color: rgba(30, 67, 141, 1);
-  }
+
   @media screen and (max-width: 375px) {
     figure {
       img {
